[package]
name = "chip8"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
minifb = { version = "0.28", default-features = false, features = ["x11"] }
rodio = "0.21.1"
clap = {version = "4.5.41", features = ["derive"]}